# dynconf-nats

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py  schemas.py
app/services/dynconf/: service.py
